# internship

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  featurelist.md  graph.dot  test.py  test1_basic_operations.txt  test2_cyclic_graph.txt  test3_disconnected.txt  test4_error_handling.txt  test5_dijkstra.txt  test6_tarjan.txt
SCCP-pass/: .gitignore  CMakeLists.txt  TEST_RUN.sh  input.ll  output.ll
SCCP-pass/src/: MyPass.cpp
SCCP-pass/tests/: input.c
graphs/: .gitignore  readme.md
graphs/include/: graph.h
graphs/index/: edge.cpp.A0629D52EF81EBEC.idx  edge.h.827FDB61F4D7C646.idx  graph.cpp.BD5EBDDD97CED602.idx  graph.h.731FFF3F9FCBBBE3.idx  graph_algo.cpp.451428FCB3712475.idx  graph_dump.cpp.C91E9D4E53968318.idx  main.cpp.51587A7B5B9B6BBE.idx  node.cpp.9DEFFD4A5A5EC094.idx  node.h.25B05A413DBEC9E8.idx
graphs/src/: edge.cpp  graph_algo.cpp  graph_dump.cpp  main.cpp  node.cpp
graphs/tests/: checker.py  output1_expected.txt  output2_expected.txt  output3_expected.txt  output4_expected.txt  output5_expected.txt  output6_expected.txt  test1_basic_operations.txt  test2_cyclic_graph.txt  test5_dijkstra.txt  test6_tarjan.txt
include/: edge.h  graph.h  node.h
src/: edge.cpp  graph.cpp  graph_algo.cpp  graph_dump.cpp  main.cpp  node.cpp
tests/: checker.py  output1_expected.txt  output2_expected.txt  output3_expected.txt  output5_expected.txt  output6_expected.txt  test3_disconnected.txt  test5_dijkstra.txt
week_5_task/: TEST_RUN.sh
week_5_task/llvm-my-pass/: TEST_RUN.sh
week_5_task/llvm-my-pass/src/: MyPass.cpp
week_5_task/llvm-my-pass/tests/: input.c
